--- a/tersayang/index.html.html
+++ b/tersayang/index.html.html
@@ -19,8 +19,9 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
     </div>
 
     <script>
-      ucapan = ``;
-      musik = ``;
+      ucapan = `HALLOWW SAYANGG INI ADA BUNGA BUAT KAMU
+      INI BARU WEB NYA AJA NANTI TANGGAL 6 AKU KASIH YANG ASLINYAA YAHHH`;
+      musik = `music.mp3.mp3`;
       nomorWhatsapp = ``;
       idTelegram = ``;
 
