--- a/hbdsayang/index.html
+++ b/hbdsayang/index.html
@@ -15,7 +15,7 @@
     <div class="card">
         <div class="imgBox">
             <div class="bark"></div>
-            <img src="logo.jpeg-removebg.png">
+            <img src="logo.png">
         </div>
         <div class="details">
             <h4 class="color1">WISH YOU ALL THE BEST!!(YET)</h4>
