--- a/hbdsayang/index.html
+++ b/hbdsayang/index.html
@@ -15,22 +15,22 @@
     <div class="card">
         <div class="imgBox">
             <div class="bark"></div>
-            <img src="logo.png">
+            <img src="foto.jpeg">
         </div>
         <div class="details">
-            <h4 class="color1">WISH YOU ALL THE BEST!!(YET)</h4>
+            <h4 class="color1">WISH YOU ALL THE BEST SAYANG</h4>
             <h4 class="color2">(HAPPY BIRTHDAY)</h4>
-            <p>DEAR You're Student,</p>
-            <p> Let's See.../p>
-            <p>Selamat di usia 24y nya miss</p>
-            <p>Tetapi sesungguhnya aku tau</p>
-            <p>kasih sayangmu kepadaku I</p>
-            <p>Mengalahkan murka mu</p>
-            <p>How do you do that?.</p>
+            <p>DEAR My Gf,</p>
+            <p> Let's See...
+            <p>cie yang udah 17,udah ga jadi bocil lagi nih</p>
+            <p>tetep semangat yah buat kadepannya</p>
+            <p>aku akan selalu menemani semua rintangan yang akan kamu lalui</p>
+            <p>semoga semua permintaan dan harapan kamu kedepannya bisa terkabul yahh sayang</p>
+            <p>doa terbaik untuk kamu dan keluarga.</p>
 
-            <p>jan lupain aku ya:)</p>
-            <p class="text-right">Congrats Repeat Year, Mis Puspa!</p>
-            <p class="text-right">Raditya</p>
+            <p>selalu jadi nanay yg aku kenal yah:)</p>
+            <p class="text-right">Congrats Repeat Year,DARLING!</p>
+            <p class="text-right">LAXXY</p>
         </div>
         </div>
     </div>
