--- a/hbdsayang/index.html
+++ b/hbdsayang/index.html
@@ -24,8 +24,8 @@
             <p> Let's See...
             <p>cie yang udah 17,udah ga jadi bocil lagi nih</p>
             <p>tetep semangat yah buat kadepannya</p>
-            <p>aku akan selalu menemani semua rintangan yang akan kamu lalui</p>
-            <p>semoga semua permintaan dan harapan kamu kedepannya bisa terkabul yahh sayang</p>
+            <p>aku akn sllu ad untuk kmu di saat dnia trsa brat bgi kmu</p>
+            <p>smoga thun dpn menjdi thun terbaik bgi kmu dn kta yh darling</p>
             <p>doa terbaik untuk kamu dan keluarga.</p>
 
             <p>selalu jadi nanay yg aku kenal yah:)</p>
