--- a/hbdsayang/index.html
+++ b/hbdsayang/index.html
@@ -22,7 +22,7 @@
             <h4 class="color2">(HAPPY BIRTHDAY)</h4>
             <p>DEAR My Gf,</p>
             <p> Let's See...
-            <p>cie yang udah 17,udah ga jadi bocil lagi nih</p>
+            <p>cie yang udah 17,udah bisa bikin ktp nih</p>
             <p>tetep semangat yah buat kadepannya</p>
             <p>aku akn sllu ad untuk kmu di saat dnia trsa brat bgi kmu</p>
             <p>smoga thun dpn menjdi thun terbaik bgi kmu dn kta yh darling</p>
